# twitch-translator

./: .gitignore  .rooignore  Cargo.toml  IMPROVEMENTS.md  INSTALL.md  LICENSE  README.md  TWITCH_SETUP_GUIDE.md  test_minimal_build.bat  test_minimal_build.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs
crates/core/src/asr/: mod.rs  whisper.rs
crates/core/src/decode/: mod.rs
crates/core/src/emotion/: analyzer.rs  analyzer_test.rs  mod.rs  test_emotion.rs
crates/core/src/ingest/: mod.rs  twitch.rs
crates/core/src/pipeline/: mod.rs
crates/core/src/playback/: audio.rs  dummy.rs  mod.rs
crates/core/src/translate/: deepl.rs  dummy.rs  mod.rs
crates/core/src/tts/: basic.rs  elevenlabs.rs  fallback.rs  mod.rs  piper.rs
crates/core/src/util/: mod.rs  retry.rs  ring_buffer.rs
examples/: config.toml
scripts/: download-model.bat  download-model.sh  setup.bat  setup.sh
