[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
futures = "0.3"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
ffmpeg-sidecar = "2.4.0"
m3u8-rs = "6"
mutter = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

