[package]
name = "twitch-translator-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "twitch_translator_core"
path = "src/lib.rs"

[dependencies]
bytes.workspace = true
futures.workspace = true
ffmpeg-sidecar.workspace = true
m3u8-rs.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
