[package]
name = "twitch-translator-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "twitch_translator_core"
path = "src/lib.rs"

[dependencies]
bytes.workspace = true
futures.workspace = true
m3u8-rs.workspace = true
rand.workspace = true
reqwest.workspace = true
rodio = "0.21.1"
serde.workspace = true
serde_json.workspace = true
symphonia = { version = "0.5", features = ["mp3"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding = "2.1"

# Audio decoding
ffmpeg-sidecar = { workspace = true, optional = true }

# ASR
whisper-rs = { version = "0.15.1", optional = true, features = ["vulkan"] }

[features]
default = ["whisper-rs", "ffmpeg-sidecar"]
whisper-rs = ["dep:whisper-rs", "dep:ffmpeg-sidecar"]
ffmpeg-sidecar = ["dep:ffmpeg-sidecar"]
playback-device-enum = []
